EEVEE-NEXT non stop rendering after transforming anything #113470

Closed
opened 2023-10-10 06:44:16 +02:00 by Regnas · 1 comment

System Information
Windows

Blender Version
Broken: blender-4.1.0-alpha+main.a935701a872d-windows.amd64-release
Worked: blender-4.1.0-alpha+main.995aa08c7951-windows.amd64-release

Short description of error
With eevee-next rendered/material preview mode, if you transform anything on the scene, you'll notice that eevee-next never stops rendering. You can see the gpu always working in the task manager.
Previous builds didn't have that problem.

Exact steps for others to reproduce the error
Run blender
Swtch the render engine to eevee-next (must be enabled in the prefs ofc)
Open the task manager and keep an eye on the blender gpu usage
Switch the viewport shading to material preview or rendered
Everything should be fine for now
Transform (move/scale/rotate) anything on the scene
See the gpu usage. it wont stop working

See:

**System Information** Windows **Blender Version** Broken: blender-4.1.0-alpha+main.a935701a872d-windows.amd64-release Worked: blender-4.1.0-alpha+main.995aa08c7951-windows.amd64-release **Short description of error** With eevee-next rendered/material preview mode, if you transform anything on the scene, you'll notice that eevee-next never stops rendering. You can see the gpu always working in the task manager. Previous builds didn't have that problem. **Exact steps for others to reproduce the error** Run blender Swtch the render engine to eevee-next (must be enabled in the prefs ofc) Open the task manager and keep an eye on the blender gpu usage Switch the viewport shading to material preview or rendered Everything should be fine for now Transform (move/scale/rotate) anything on the scene See the gpu usage. it wont stop working See: <video controls="" src="https://media.discordapp.net/attachments/587761956526751784/1161156223949865050/blender_PRv2UigUAh.mp4"></video>
Regnas added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-10 06:44:17 +02:00

The viewport is stuck continually redrawing. You can see this using debug value 888. Exiting and re-entering Render/Material preview mode doesn't fix things either.

CC @fclem

The viewport is stuck continually redrawing. You can see this using debug value 888. Exiting and re-entering Render/Material preview mode doesn't fix things either. CC @fclem
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-10 11:49:49 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113470
No description provided.